refine chat persistence and winner enrichment